# glfw_opengl

./: .gitignore  CMakeLists.txt  fragment.glsl  main.cpp  vertex.glsl
include/: error.h  initGL.h  loadVertices.h  logging.h  shader.h  utils.h  window.h
src/: loadVertices.cpp  logging.cpp  main.cpp  shader.cpp  utils.cpp  window.cpp
